fixed time shift button placement

--- a/client/src/styles/Indicators.scss
+++ b/client/src/styles/Indicators.scss
@@ -138,6 +138,9 @@
       border-radius: 30px;
       font-size: 20px;
       align-self: center;
+
+      // button placement offset: 
+      margin-bottom: 75px;
     }
 
     .btn-off {
